# brycenall-site

./: .gitignore  README.md  config.py  db.sqlite3  manage.py  package-lock.json  pyproject.toml  tailwind.config.js
brycenall/: asgi.py  settings.py  urls.py  wsgi.py
brycenall/aws/: __init__.py  session.py
global_static/css/: main.css
home/: models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_delete_video.py  0003_initial.py  0004_video_remove_newslettersignupform_last_modified.py  0005_alter_video_file.py  0006_alter_video_file.py  0007_remove_video_duration_video_date_uploaded.py  0008_rename_file_video_source_rename_name_video_title_and_more.py  0009_delete_newslettersignupform.py  0010_alter_video_desc.py
home/templates/home/: about.html  base.html  contact.html  gallery.html  home.html  navbar.html
home/templates/home/shared/: base.html  footer.html  navbar.html
main_app/: admin.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py
main_app/templates/main_app/: about.html  base.html  contact.html  footer.html  gallery.html  home.html  navbar.html  success_redirect.html  video.html  video_upload.html
minitube/: admin.py  apps.py  models.py  urls.py  views.py
minitube/templates/minitube/: gallery.html  home.html  media.html
shop/: urls.py  views.py
shop/templates/shop/: base.html  home.html
